fixed redirecting bug

--- a/backend/frontend/signup.html
+++ b/backend/frontend/signup.html
@@ -16,7 +16,7 @@
                 <img src="./images/logo.png" style="width: 60px; height: 60px; margin-left: 50px;">
             </div>
             <div class="form">
-                <form class="user-form">
+                <form class="user-form" id="userForm">
                     <label for="name"><b>Name*</b><br /></label>
                     <input type="text" name="name" id="name" placeholder="Enter Your Name" /> <br />
     
