made some changes

--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -15,7 +15,7 @@
             <h2>Join today.</h2>
 
             <div class="form">
-                <form action="home.html" method="get">
+                <form id="user-login">
                     <label for="email"><b> Email Address*</b> <br></label>
                     <input type="email" name="email" id="email" placeholder="Enter Your Email Address"> <br>
     
