--- a/backend/frontend/home.html
+++ b/backend/frontend/home.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HomePage</title>
+    <title>Twitter | Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to Twitter...</h1>
+    <div class="navbar">
+        <img src="images/logo.png" class="logo">
+        <h1>Home</h1>
+        <h1>Profile</h1>
+        <button id="tweet">Tweet</button>
+    </div>
+
+    <hr>
+    <div class="x-body">
+        <div class="x-card">card</div>
+        <div class="x-card">card</div>
+        <div class="x-card">card</div>
+        <div class="x-card">card</div>
+        <div class="x-card">card</div>
+        <div class="x-card">card</div>
+
+    </div>
+
 </body>
 </html>
